6214127 rework Panther l3 cache error injector nomenclature 6300695 add Niagara (US-T1) support and sun4u/sun4v driver split. 5106649 mtst uiue causes "Fatal PCI UE Error" panic on USIII+ 6209223 mtst must be run as root 6214794 do_io_err() should expect msync() to fail if error is uncorrectable 6214801 we forget to call fini_config on some exit conditions 6260486 cpumem error injector needs AVL support enhancement. 6223376 Panther Error Injector should support CPORT and Interconnect Address parity errors 6190369 specifying address for error injection causes hat_memload panic 6214129 injector set_xxx() functions should return previous value of regs 6240804 need to also check and clear afsr-ext on panther 6285532 kdcpu/kicpu test cases failed on v440 platform (USIIIi) 6260485 peek/poke functions in cpumem injector need membar #Sync. 6197508 misspell DCUCR to DCR in ch_enable_errors() 6248474 panther ei KDEMC test fails due to illegal instruction error. 6223647 ja_wr_memory() needs a different L2$ flush address for Serrano 6248471 Panther l2/l3 injectors fail sometimes with line not found in cache. 6214128 Panther IPB injection functions need to be combined

--- a/usr/src/pkgdefs/Makefile
+++ b/usr/src/pkgdefs/Makefile
@@ -69,7 +69,8 @@ sparc_SUBDIRS= \
 	SUNWkvmt200.v \
 	SUNWluxd.u \
 	SUNWluxl \
-	SUNWonmtst \
+	SUNWonmtst.u \
+	SUNWonmtst.v \
 	SUNWpd    \
 	SUNWpdu	  \
 	SUNWpstl.u \
