--- a/usr/src/uts/sun4v/Makefile.sun4v
+++ b/usr/src/uts/sun4v/Makefile.sun4v
@@ -332,6 +332,8 @@ DRV_KMODS      += mdesc
 DRV_KMODS	+= ncp
 DRV_KMODS	+= ebus
 DRV_KMODS       += su
+DRV_KMODS	+= memtest
+
 #
 #	Exec Class Modules (/kernel/exec):
 #
