6269753 gcc and cmd/sa don't get along 6272664 gcc and cmd/pt_chmod don't get along 6273933 gcc and cmd/tic don't get along 6273957 gcc and cmd/utmpd don't get along 6273960 gcc and cmd/utmp_update don't get along 6307969 gcc and cmd/eeprom don't get along

--- a/usr/src/Makefile.lint
+++ b/usr/src/Makefile.lint
@@ -210,6 +210,7 @@ COMMON_SUBDIRS = \
 	cmd/psradm \
 	cmd/psrinfo \
 	cmd/psrset \
+	cmd/pt_chmod \
 	cmd/ptools \
 	cmd/pwck \
 	cmd/ramdiskadm \
@@ -249,6 +250,8 @@ COMMON_SUBDIRS = \
 	cmd/truss \
 	cmd/tty \
 	cmd/uadmin \
+	cmd/utmp_update \
+	cmd/utmpd \
 	cmd/valtools \
 	cmd/wall \
 	cmd/wbem \
