--- a/usr/src/Makefile.master.64
+++ b/usr/src/Makefile.master.64
@@ -20,7 +20,7 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2004 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
@@ -74,7 +74,8 @@ LINT=		$($(MACH64)_LINT)
 BUILD.SO=	$(CC) $(CFLAGS) -o $@ $(GSHARED) $(DYNFLAGS) \
 		$(PICS) -L $(ROOTLIBDIR64) $(LDLIBS)
 
-CCNEEDED		= -lCrun
-# XX64  What to do about libstdc++ for g++ ???
+CCNEEDED =		-lCrun
+$(__GNUC64)CCNEEDED =	-L$(SFWLIBDIR) -R$(SFWLIBDIR) -lstdc++	\
+			-lgcc_s_$(MACH64)
 
 BUILDCCC.SO=    $(CCC) -o $@ $(GSHARED) $(DYNFLAGS) $(PICS) $(LDLIBS) $(CCNEEDED)
