PSARC/2005/470 E1000g Nemo Migration 4913292 e1000g: does not support PSARC 2003/264 Extended IP cksum_offload 5071610 e1000g can't send any packets after a jumbo-packet forwarding test. 5073739 find some memory leaks after load_unload test 5082975 in Jumbo enable mode, netperf indicates a lower throughput, compared to Jumbo of 5085394 e1000g driver hangs system during 64byte stress testing 6174349 netlb support needed for Solaris e1000g driver 6207682 e1000g needs link up/down support 6211068 e1000g has some input error packets during stress test 6212810 e1000g caught sending unsolicited M_PROTO/M_PCPROTO messages 6219298 warnings about "inconsistent getinfo(9E) implementation" 6221079 e1000g driver interface conversion from DLPI to GLD3.0(nemo) 6224901 e1000g fails to configure VLANs on a Sun v65x 6226217 e1000g should support trunking 6238486 e1000g: poor performance in web server benchmark, high CPU utilization noted 6239279 Network stess test fail on 82545GM chip on IBM Blade HS40 6242612 e1000g needs to support SPARC 6247936 In e1000g transmission, ddi_dma_addr_bind_handle() returns more cookies than speficied 6273730 e1000g causes memory leaks within Freelist_alloc and PktAlloc_buffers 6286414 snmp: ifOperStatus for e1000g driver doesn't change when cable is unplugged. 6287250 e1000g may need to use new Intel-recommended semaphore mechanism 6293265 e1000g_intr doesn't use mutex at all 6304657 e1000g_PktAlloc_buffers() causes a panic when ddi_dma_addr_bind_handle() fails.

--- a/usr/src/uts/common/Makefile.rules
+++ b/usr/src/uts/common/Makefile.rules
@@ -716,6 +716,10 @@ $(OBJS_DIR)/%.o:		$(UTSBASE)/common/io/nge/%.c
 	$(COMPILE.c) -o $@ $<
 	$(CTFCONVERT_O)
 
+$(OBJS_DIR)/%.o:		$(UTSBASE)/common/io/e1000g/%.c
+	$(COMPILE.c) -o $@ $<
+	$(CTFCONVERT_O)
+
 $(OBJS_DIR)/%.o:		$(UTSBASE)/common/ipp/%.c
 	$(COMPILE.c) -o $@ $<
 	$(CTFCONVERT_O)
