PSARC 2005/484 FMA for Fire PCI-E I/O 6278378 Eversholt diagnosis rules for Fire hostbridge

--- a/usr/src/cmd/fm/eversholt/files/sparc/sun4v/Makefile
+++ b/usr/src/cmd/fm/eversholt/files/sparc/sun4v/Makefile
@@ -23,9 +23,15 @@
 # Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
+#
 #ident	"%Z%%M%	%I%	%E% SMI"
 
-EFT_PLAT= sun4u
-EFT_PLAT_FILES= fire.eft schizo.eft psycho.eft tomatillo.eft xmits.eft
+EFT_PLAT= sun4v
+
+#
+# Link fire.eft to sun4u
+#
+EFT_PLAT_SRC= sun4u
+EFT_PLAT_FILE= fire.eft
 
 include ../../Makefile.com
