--- a/usr/src/lib/pam_modules/allow/sparc/Makefile
+++ b/usr/src/lib/pam_modules/allow/sparc/Makefile
@@ -24,45 +24,7 @@
 # Use is subject to license terms.
 #
 #ident	"%Z%%M%	%I%	%E% SMI"
-#
-# lib/pam_modules/Makefile
-#
 
-SUBDIRS = \
-	allow	\
-	authtok_get	\
-	authtok_check	\
-	authtok_store	\
-	deny		\
-	dhkeys		\
-	dial_auth	\
-	krb5		\
-	krb5_migrate	\
-	ldap		\
-	passwd_auth	\
-	projects	\
-	rhosts_auth	\
-	roles		\
-	sample		\
-	smartcard	\
-	unix_auth	\
-	unix_account	\
-	unix_cred	\
-	unix_session
+include ../Makefile.com
 
-all :=		TARGET= all
-catalog :=	TARGET= _msg
-clean :=	TARGET= clean
-clobber :=	TARGET= clobber
-install :=	TARGET= install
-lint :=		TARGET= lint
-_msg :=		TARGET= _msg
-
-.KEEP_STATE:
-
-all clean clobber install lint _msg: $(SUBDIRS)
-
-$(SUBDIRS): FRC
-	@cd $@; pwd; $(MAKE) $(TARGET)
-
-FRC:
+install: all $(ROOTLIBS) $(ROOTLINKS)
