--- a/usr/src/cmd/volmgt/etc/vold.conf
+++ b/usr/src/cmd/volmgt/etc/vold.conf
@@ -19,7 +19,7 @@
 #
 # CDDL HEADER END
 #
-# Copyright 2000 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
@@ -29,6 +29,9 @@
 
 # Database to use (must be first)
 db db_mem.so
+
+# Volfs support of removable media devices
+support nomedia
 
 # Labels supported
 label cdrom label_cdrom.so cdrom
