6241314 ctfconvert should understand SPARC real types in DWARF 6313293 ctfstabs is confused by gcc's output 6268862 add more gcc support routines to a few places 6272005 gcc and cmd/mdb don't get along 6273966 gcc and common/dis don't get along

--- a/usr/src/cmd/mdb/Makefile.libstand
+++ b/usr/src/cmd/mdb/Makefile.libstand
@@ -109,6 +109,9 @@ lint: $(LINTFILES)
 	$(COMPILE.c) $<
 	$(CTFCONVERT_O)
 
+%.o: $(SRC)/common/util/i386/%.s
+	$(COMPILE.s) $<
+
 %.o: ../../libstand/%.c
 	$(COMPILE.c) -o $@ $<
 	$(CTFCONVERT_O)
@@ -125,6 +128,9 @@ lint: $(LINTFILES)
 
 %.ln: $(SRC)/common/util/%.c
 	$(LINT.c) -c $<
+
+%.ln: $(SRC)/common/util/i386/%.s
+	$(LINT.s) -c $<
 
 %.ln: ../../libstand/%.c
 	$(LINT.c) -c $<
