--- a/usr/src/uts/intel/Makefile.files
+++ b/usr/src/uts/intel/Makefile.files
@@ -58,6 +58,14 @@ CORE_OBJS +=		\
 	sysi86.o
 
 #
+# 64-bit multiply/divide compiler helper routines
+# used only for ia32
+#
+
+SPECIAL_OBJS_32 +=	\
+	muldiv.o
+
+#
 #	Generic-unix Module
 #
 GENUNIX_OBJS +=		\
