PSARC 2005/483 SMBIOS Support for Solaris 6313638 SMBIOS Support for Solaris 6230033 prtdiag should be implemented for Solaris x86 6313668 bmc driver should not have its own private smbios reader 6313670 post_startup_mmu_initialization() is useless and can be deleted

--- a/usr/src/Makefile.lint
+++ b/usr/src/Makefile.lint
@@ -229,6 +229,7 @@ COMMON_SUBDIRS = \
 	cmd/runat \
 	cmd/sed_xpg4 \
 	cmd/smartcard \
+	cmd/smbios \
 	cmd/smserverd \
 	cmd/sort \
 	cmd/split \
@@ -332,6 +333,7 @@ COMMON_SUBDIRS = \
 	lib/libsendfile \
 	lib/libsldap \
 	lib/libslp \
+	lib/libsmbios \
 	lib/libsmedia \
 	lib/libthread \
 	lib/libumem \
