--- a/usr/src/uts/common/sys/Makefile
+++ b/usr/src/uts/common/sys/Makefile
@@ -418,6 +418,8 @@ CHKHDRS=			\
 	siginfo.h		\
 	signal.h		\
 	sleepq.h		\
+	smbios.h		\
+	smbios_impl.h		\
 	sobject.h		\
 	socket.h		\
 	socket_impl.h		\
