6252036 dladm show-link outputs nothing for regular users 6260551 aggr_grp_detach_port() can be called without AGGR_LACP_LOCK_HELD 6270678 The aggregation was unavailable after using dladm modify-aggr change mac address to zero 6283674 potential race condition between dls_rx_set and i_dls_link_ether_rx 6293292 dladm show-dev deceives when passed unknown device names 6309909 dld_open must call qassociate(9F) to inform the framework it is DDI-compliant 6311907 poll_tx, ill_tx and str_mdata_fastpath_put() comments are incorrect 6313057 dladm show-dev doesn't show legacy devices 6315019 sparc full kernel lint is missing many modules

--- a/usr/src/lib/Makefile
+++ b/usr/src/lib/Makefile
@@ -401,7 +401,7 @@ libefi:		libuuid
 libelfsign:	libike libcryptoutil pkcs11
 libinetcfg:	libnsl libsocket libdevinfo
 libnsl:		libmd5 libscf
-libmacadm:	libdevinfo libdladm libdlpi
+libmacadm:	libdevinfo
 libuuid:	libsocket
 libinetutil:	libsocket
 libsecdb:	libcmd libnsl
