6302553 Need watchdog supports on Netra systems: N440, N240, N210

--- a/usr/src/uts/sun4u/mpxu/Makefile.mpxu
+++ b/usr/src/uts/sun4u/mpxu/Makefile.mpxu
@@ -68,7 +68,7 @@ MPXU_LINT_LIB_DIR	= $(UTSBASE)/$(PLATFORM)/mpxu/lint-libs/$(OBJS_DIR)
 #
 #	Define modules.
 #
-MPXU_KMODS	= platmod tsalarm
+MPXU_KMODS	= platmod tsalarm ntwdt
 
 #
 # Links to UltraSparc III crypto modules
