--- a/usr/src/uts/sun4u/Makefile.sun4u
+++ b/usr/src/uts/sun4u/Makefile.sun4u
@@ -456,7 +456,7 @@ CPU_KMODS	+= cheetah cheetahplus jalapeno serrano spitfire hummingbird
 #	sun4u 'TOD' Modules (/platform/.../kernel/tod):
 #
 TOD_KMODS	+= todds1287 todds1337 todmostek todstarfire todsg todstarcat
-TOD_KMODS	+= todm5819 todm5819p_rmc todblade todm5823
+TOD_KMODS	+= todm5819 todm5819p_rmc todblade todm5823 todbq4802
 
 #
 #	Performance Counter BackEnd Modules (/usr/kernel/pcbe):
