--- a/usr/src/ucbcmd/Makefile.ucbcmd
+++ b/usr/src/ucbcmd/Makefile.ucbcmd
@@ -40,8 +40,6 @@ CHMOD=		chmod
 MKDIR=		mkdir
 TOUCH=		touch
 
-LDFLAGS +=	$(STRIPFLAG)
-
 FILEMODE=	0555
 LIBFILEMODE=	0444
 ROOTBIN=	$(ROOT)/usr/ucb
@@ -71,11 +69,11 @@ LDLIBS.cmd =    $(ENVLDLIBS1)  $(ENVLDLIBS2)  $(ENVLDLIBS3)
 LDLIBS =        $(LDLIBS.cmd)
 
 LDFLAGS.cmd = \
-	$(STRIPFLAG) $(ENVLDFLAGS1) $(ENVLDFLAGS2) $(ENVLDFLAGS3) \
+	$(ENVLDFLAGS1) $(ENVLDFLAGS2) $(ENVLDFLAGS3) \
 	$(NES_MAPFILE:%=-M%) \
 	$(PGA_MAPFILE:%=-M%)
 
-LDFLAGS =       $(STRIPFLAG) $(LDFLAGS.cmd)
+LDFLAGS =       $(LDFLAGS.cmd)
 
 SETRUNPATH=	LD_RUN_PATH=/usr/ucblib
 
